centering the game div, looks correct on iPhone

--- a/client/client.less
+++ b/client/client.less
@@ -91,6 +91,11 @@ body {
   }
 }
 
+@media screen and (max-width: 600px) {
+  html, body, #outer-wrap, #inner-wrap, #main {
+    height: 100%;
+  }
+}
 
 // @menuWidth: 200px;
 
@@ -108,22 +113,18 @@ body {
 // }
 
 @gameWidth: 300px;
+@headerSize: 45px;
 
 .nGame {
-  // @media @bigScreen {
-  //   .centeredBlock(@gameWidth * @bigScreenMultiplier,
-  //       @containerHeight * @bigScreenMultiplier);
-  // }
-  // @media @smallScreen {
-  //   .centeredBlock(@gameWidth * @smallScreenMultiplier,
-  //       @containerHeight * @smallScreenMultiplier);
-  // }
+  @size: 300px;
   background-color: #c00;
-  width: 300px;
-  height: 300px;
-  margin: auto;
+  width: @size;
+  height: @size;
+  top: 50%;
+  left: 50%;
+  margin-left: -(@size / 2);
+  margin-top: -(@size / 2 + @headerSize / 2);
   position: relative;
-  clear: both;
 }
 
 // @canvasHeight: 300px;
