--- a/client/treasure.css
+++ b/client/treasure.css
@@ -15,7 +15,7 @@
 }
 
 .header {
-  height: 90px;
+  height: 45px;
 }
 
 #outer-wrap {
@@ -104,7 +104,7 @@ footer[role="contentinfo"] {
   font-size: 26px;
   cursor: pointer;
   position: relative;
-  top: 30px;
+  top: 10px;
   left: 10px;
 }
 
